Closed
Bug 151837
(bm-export)
Opened 23 years ago
Closed 23 years ago
Export Bookmarks in Bookmark Manager saves nothing
Categories
(SeaMonkey :: Bookmarks & History, defect)
SeaMonkey
Bookmarks & History
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: aarjona, Assigned: yuanyi21)
References
Details
(Whiteboard: [adt2 RTM] [ETA Needed])
Attachments
(1 file)
|
1.17 KB,
patch
|
yuanyi21
:
review+
bugzilla
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.1a) Gecko/20020613
BuildID: 2002061308
No file is created when one choses Tools - Export in Bookmark Manager
Reproducible: Always
Steps to Reproduce:
1.Open Bookmar Manager (Ctrl + B)
2.Go to Tools - Export...
3.Chose folder where Bookmarks.html (or whatever name one choses) is to be created
4.Click Save
Actual Results: Check the aforementioned location on your hard drive. Bookmarks
file is nowhere to be found.
Expected Results: An HTML file with bookmarks in the selected folder with
bookmarks.
Comment 2•23 years ago
|
||
The same situation on Mozilla 1.1a (2002061108) and Linux.
Comment 3•23 years ago
|
||
WFM in trunk 2002061006
I confirm this problem.
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.1a) Gecko/20020611
Comment 5•23 years ago
|
||
*** Bug 154411 has been marked as a duplicate of this bug. ***
Until this bug is worked out..is there any way to get my bookmarks out of
Mozilla? Is it stored in a temp file or something?
Comment 7•23 years ago
|
||
Yup.
In your profile directory there's a file called bookmarks.html. That't the thing
you want to copy.
Your profile is here: http://gemal.dk/mozilla/profile.html (just in case).
Comment 8•23 years ago
|
||
*** Bug 155405 has been marked as a duplicate of this bug. ***
Updated•23 years ago
|
Alias: bm-export
Comment 9•23 years ago
|
||
*** Bug 155501 has been marked as a duplicate of this bug. ***
Comment 10•23 years ago
|
||
*** Bug 156152 has been marked as a duplicate of this bug. ***
Comment 11•23 years ago
|
||
Confirmed with 2002070508 trunk under Windows XP. If a Mac user can also
confirm this, the OS can be changed to All.
Comment 12•23 years ago
|
||
*** Bug 157763 has been marked as a duplicate of this bug. ***
Comment 13•23 years ago
|
||
I've added bug 157763 as a duplicate (MacOS 8.6), and I could also confirm the
same behaviour on MacOS 9 (build 2002071508).
--> All
OS: Windows 2000 → All
Hardware: PC → All
Updated•23 years ago
|
Comment 14•23 years ago
|
||
Odd, this worked for me the first time I tried it but subsequent attempts do not
write out the file. 2002071508 on Win2K
Comment 15•23 years ago
|
||
confirming problem on Moz2002071813
Comment 16•23 years ago
|
||
*** Bug 158806 has been marked as a duplicate of this bug. ***
Comment 17•23 years ago
|
||
Thank you for showing me how to find where my bookmarks are stored in profile,
by the way...I hadnt checked back for your answer in awhile.
Update from me on this bug... sometimes I _can_ export files in Win98SE,
sometimes I can't..seems random.
Also, this may or may not be a different bug, but I'll mention it here - every
once in awhile when I open the bookmark tab, all the seperators are thrown to
the bottom of the list..and have to be put back manually..don't know why
Comment 18•23 years ago
|
||
Problem persists with v 1.1b - OS = Win NT4
| Reporter | ||
Comment 19•23 years ago
|
||
I am using 1.1b 2002072104 on Windows 2000 Pro (SP2 + hotfixes). Problem is
still there. It has a new twist though. Now I chose Export... from the menu and
nothing happens. Before I was getting a save dialog and nothing was saved.
Comment 20•23 years ago
|
||
This either needs to be fixed for 1.1 or the UI removed.
Comment 21•23 years ago
|
||
Confirmed on 1.1b Mac OS X [Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US;
rv:1.1b) Gecko/20020722] Copying bookmarks.html from it's location somewhere
under ~/Library/Mozilla/Profiles/ is a successful workaround.
Comment 22•23 years ago
|
||
*** Bug 159852 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 23•23 years ago
|
||
This is because that we create a temp file to export the bookmark, and suppose
there is already a bookmark file, then we remove the old one and rename the
temp file to it. This logic will be failed when the old bookmark file doesn't
exist, i.e. the temp file name equals to the old file name, remove old file
will remove the temp file itself.
My fix checks whether the file names of the temp file and the destination file
are same. If so, leave the temp file here, don't do the remove/rename actions.
Comment 24•23 years ago
|
||
This code was changed in attachment 84384 [details] [diff] [review] for bug 86501, checked in around
2002-05-21. That makes sense, then, that it could be the source of this bug.
Comment 25•23 years ago
|
||
*** Bug 160569 has been marked as a duplicate of this bug. ***
Comment 26•23 years ago
|
||
I tested this with a 7/30 Mac OS X branch build and successfully exported my
bookmarks twice... Is this a windows only bug?
Unless the bookmarks file is being exported into the profile directory, the name
of the file should have nothing to this. I don't believe the proposed patch will
do anything other than leave 2 versions of the file behind.
As an aside, you might want to look at modules/libpref/src/nsSafeSaveFile.cpp
which is used to do this sort of thing by the PreferencesService...
Comment 27•23 years ago
|
||
Brian Nesse, did you test a trunk build? This may not be broken on the branch
but it is broken on the trunk. I've just tested today's trunk Mac OS X, Windows
and Linux builds and it fails on each of those.
| Assignee | ||
Comment 28•23 years ago
|
||
Brian, I believe this happended in all platform. I also believe my patch does
not leave 2 versions of the file here. If so, the old one will be removed and
the new one will be renamed to the old one's file name.
Dean, could you r= my patch? Ben, per comment 24, could you sr= this fix?
Assignee: ben → kyle.yuan
Comment 29•23 years ago
|
||
Comment on attachment 93559 [details] [diff] [review]
proposed patch
sr=blake
Attachment #93559 -
Flags: superreview+
Comment 30•23 years ago
|
||
Comment on attachment 93559 [details] [diff] [review]
proposed patch
a=asa (on behalf of drivers) for checkin to 1.1
Attachment #93559 -
Flags: approval+
| Assignee | ||
Comment 31•23 years ago
|
||
Comment on attachment 93559 [details] [diff] [review]
proposed patch
pch said on IRC
r=me (pierrechanial@netscape.net)
Attachment #93559 -
Flags: review+
| Assignee | ||
Comment 32•23 years ago
|
||
checked into trunk!
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 33•23 years ago
|
||
*** Bug 160654 has been marked as a duplicate of this bug. ***
Comment 34•23 years ago
|
||
*** Bug 160815 has been marked as a duplicate of this bug. ***
Comment 35•23 years ago
|
||
Works for me with Build 2002080204-TRUNK with Win98SE.
Marking Verified
Status: RESOLVED → VERIFIED
Comment 36•23 years ago
|
||
*** Bug 160949 has been marked as a duplicate of this bug. ***
Comment 37•23 years ago
|
||
*** Bug 161441 has been marked as a duplicate of this bug. ***
Comment 38•23 years ago
|
||
*** Bug 161993 has been marked as a duplicate of this bug. ***
Comment 39•23 years ago
|
||
*** Bug 162104 has been marked as a duplicate of this bug. ***
Comment 40•23 years ago
|
||
*** Bug 162167 has been marked as a duplicate of this bug. ***
Comment 41•23 years ago
|
||
*** Bug 162775 has been marked as a duplicate of this bug. ***
Comment 42•23 years ago
|
||
*** Bug 163152 has been marked as a duplicate of this bug. ***
Comment 43•23 years ago
|
||
*** Bug 163945 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•