Bug 151837 Export Bookmarks in Bookmark Manager saves nothing r=pierrechanial@netscape.net, sr=blake, a=asa Must not delete/rename the temp file if tempFile == aBookmarksFile